--- a/rtorrent/palette/0/stable.css
+++ b/rtorrent/palette/0/stable.css
@@ -21,9 +21,14 @@
 .stable-body tr.selected td {background: #FFF880}
 .stable-body tr.odd td {background: #F3F3F3}
 .stable-body tr.even td {background: #FFFFFF}
-.stable-move-header {position: absolute; background: transparent url(./images/header_move.gif) repeat-x scroll center top; background: rgba(255,255,255,0.7); top: 0px; font: menu; padding: 2px 12px 2px 4px; line-height: 12px; -moz-user-select: none; visibility: visible; border: 1px solid #0099FF; overflow: hidden; }
-.ie .stable-move-header {filter:alpha(opacity=70)}
+.stable-move-header {position: absolute; background: transparent url(./images/header_move.gif) repeat-x scroll center top rgba(255,255,255,0.7); top: 0px; font: menu; padding: 2px 12px 2px 4px; line-height: 12px; -moz-user-select: none; visibility: visible; border: 1px solid #0099FF; overflow: hidden; }
+.gecko .stable-move-header {background: rgba(255,255,255,0.7); -moz-opacity: 0.7;}
+.ie .stable-move-header {background: rgba(255,255,255,0.7); filter:alpha(opacity=70)}
+.webkit .stable-move-header {background: rgba(255,255,255,0.7);}
 .stable-active-header {border-color: threedface !important}
 .stable-separator-header {position: absolute; top: 0px; left: 0px; font: menu; height: 1em; width: 1px; overflow: hidden; background: #0099FF; padding: 3px 0px}
 .stable-virtpad {width: 10px; height: 0px}
 .stable-scrollpos {width: 80%; height: 16px; left: 10%; top: 50%; position: absolute; padding: 0 5px; margin-top: -8px; background: #FFFFFF; color: #AAAAAA; font-size: 11px; font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif; font-weight: bold; text-align: center; overflow: hidden; display: none; white-space: nowrap}
+.stable-resize-header {	position: absolute; background-color: #A0A0A0; width: 1px; top: 0px; font: menu; -moz-user-select: none; visibility: hidden; overflow: hidden; z-index: 100; }
+
+.stable-head .rowcover { position: absolute; left: 0; top: 0; height: 20px; width: 1000px; background: transparent; display: none; }
