some design fixes

--- a/plugins/create/create.css
+++ b/plugins/create/create.css
@@ -15,3 +15,6 @@ div#tcreate input, select {margin-top: 5px; margin-bottom: 5px;}
 div#tcreate br {clear: left; line-height: 0}
 
 div#tcreate iframe {border-width: 1px; width:170px; height:200px; visibility:hidden; position:absolute; z-index:100;}
+
+#createAndSave {width: 160px;}
+#browse_path {width: 30px;}
