some design fixes

--- a/plugins/rss/ie.css
+++ b/plugins/rss/ie.css
@@ -6,3 +6,5 @@
 div#dlgEditFilters {height: 285px;}
 .rf {height: 220px;}
 .rf fieldset {height: 211px}
+div#dlgAddRSS {height: 133px}
+div#dlgEditRSS {height: 133px}
