--- a/plugins/rss/rss.css
+++ b/plugins/rss/rss.css
@@ -4,7 +4,7 @@ div#CatList ul li.selDisRSS {padding: 2px 21px; background:url(./images/disabled
 div#CatList ul li.RSS {padding: 2px 21px; background:url(./images/rss.gif) 2px no-repeat;}
 div#CatList ul li.disRSS {padding: 2px 21px; background:url(./images/disabled.gif) 2px no-repeat;}
 
-div#dlgAddRSS {width: 355px; height: 133px}
+div#dlgAddRSS {width: 355px; height: 127px}
 div#dlgAddRSS div.dlg-header {background-image: url(./images/rss.gif)}
 div#dlgAddRSS div.content {width: 330px; margin: 5px; padding: 5px; line-height: 16px}
 div#dlgAddRSS div.content input {margin-top: 5px}
@@ -13,7 +13,7 @@ div#dlgAddRSS label#nomargin { margin-top: 0px; margin-bottom: 0px; }
 div#dlgAddRSS input, select {margin-top: 5px; margin-bottom: 5px;}
 div#dlgAddRSS br {clear: left; line-height: 0}
 
-div#dlgEditRSS {width: 355px; height: 133px}
+div#dlgEditRSS {width: 355px; height: 127px}
 div#dlgEditRSS div.dlg-header {background-image: url(./images/rss.gif)}
 div#dlgEditRSS div.content {width: 330px; margin: 5px; padding: 5px; line-height: 16px}
 div#dlgEditRSS div.content input {margin-top: 5px}
@@ -36,7 +36,7 @@ div#dlgLoadTorrents input, select {margin-top: 2px; margin-bottom: 2px;}
 div#dlgLoadTorrents br {clear: left; line-height: 0}
 div#dlgLoadTorrents div#buttons { margin-top: 10px; }
 
-div#dlgEditFilters {width: 675px; height: 275px; font-size: 11px; font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;}
+div#dlgEditFilters {width: 675px; height: 270px; font-size: 11px; font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;}
 div#dlgEditFilters div.dlg-header {background-image: url(./images/rss.gif)}
 .lfc {float: left; position: relative;}
 .lf {width: 250px; height: 170px; margin: 5px; margin-right: 0; padding: 5px; background-color: #FFFFFF; border: 1px solid #D0D0D0; overflow: auto}
@@ -56,3 +56,6 @@ div#FLTchk_buttons {padding-top: 5px; width: 260px; text-align:center}
 .rf input#FLTdir_edit {margin: 5px; width: 220px;}
 .rf input.Button {margin: 3px;}
 div#FLT_buttons {clear: both}
+
+#chkFilterBtn {width: 50px}
+#FLTBtn {width: 30px}
