--- a/plugins/rss/ie.css
+++ b/plugins/rss/ie.css
@@ -3,8 +3,9 @@
 .lf li input.TextboxFocus { width: 80%; }
 .lf li input.TextboxNormal { width: 80%; }
 .lf ul {width: 90%; }
-div#dlgEditFilters {height: 360px;}
-.rf {height: 300px;}
-.rf fieldset {height: 285px}
+div#dlgEditFilters {height: 380px;}
+.rf {height: 325px;}
+.rf fieldset {height: 310px;vertical-align: top;}
 div#dlgAddRSS {height: 133px}
 div#dlgEditRSS {height: 133px}
+.chk {margin: 0; padding: 0; height: 15px; overflow:hidden;}
