--- a/plugins/autotools/autotools.css
+++ b/plugins/autotools/autotools.css
@@ -1,3 +1,5 @@
 #automove_browse_btn {width:30px}
-#automove_browse_frame {border-width: 1px; width:170px; height:200px; visibility:hidden; position:absolute;}
+#automove_browse_frame {border-width: 1px; width:170px; height:160px; visibility:hidden; position:absolute;}
+#autowatch_browse_btn {width:30px}
+#autowatch_browse_frame {border-width: 1px; width:170px; height:160px; visibility:hidden; position:absolute;}
 #st_autotools {display: none}
