--- a/rtorrent/palette/0/style.css
+++ b/rtorrent/palette/0/style.css
@@ -213,13 +213,15 @@ div#dlgRss div#dlgRss-content {height: 253px; width: 478px; margin: 10px; border
 div.torrentadd {line-height: 18px; margin: 2px 0; padding: 0 0 0 20px; background: transparent url(./images/add.gif) no-repeat scroll 2px center; border-bottom: 1px solid #D0D0D0}
 .itemadd {background: transparent url(./images/add.gif)}
 .itemadded {background: transparent url(./images/tick.gif)}
-div#dlgProps {width: 400px; height: 205px}
-.konqueror div#dlgProps {height: 213px}
-div#dlgProps div.dlg-header {background-image: url(./images/props.gif)}
-div#dlgProps div.content {width: 380px; padding: 10px}
+
+div#dlgProps {width: 395px; height: 215px}
+div#dlgProps div.dlg-header {background-image: url(../images/props.gif)}
+div#dlgProps div.content {width: 380px; margin-left: 5px; }
 div#dlgProps textarea#prop-trackers {width: 100%; height: 70px; background: #FFFFFF; border: 1px solid #D0D0D0}
-div#dlgProps fieldset div {line-height: 16px}
+div#dlgProps fieldset {margin-bottom: 5px; }
+div#dlgProps fieldset div {line-height: 16px; }
 div#dlgProps fieldset div.props-spacer {width: 90%; float: left}
+
 input#prop-tracker_numwant {width: 60px; float: right}
 input#prop-ulslots {width: 60px; float: right}
 input#prop-peers_min {width: 60px; float: right}
